[package]
name = "EpsilonRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

tokio = { version = "1", features = ["full"] }

kube = { version = "0.65.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

anyhow = { version = "1.0.53", features = ["backtrace"]}

log = "0.4.14"
env_logger = "0.9.0"

async-trait = "0.1.52"

async-minecraft-ping = "0.8.0"

rocket = { version = "0.5.0-rc.1", features = ["json"] }