[package]
name = "epsilon"
version = "2.0.0-alpha"
edition = "2021"

[dependencies]
futures = "0.3"

tokio = { version = "1", features = ["full"] }

kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_22"] }

reqwest = { version = "0.11", features = ["json"] }

schemars = { version = "0.8.10" }

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
serde_yaml = "0.8"

thiserror = "1.0.30"
anyhow = { version = "1.0.53", features = ["backtrace"]}

log = "0.4.14"
env_logger = "0.9.0"

async-trait = "0.1.52"

async-minecraft-ping = "0.8.0"

rocket = { version = "0.5.0-rc.2", features = ["json"] }